# godot-plugin-baproto

./: .gitignore  CHANGELOG.md  Cargo.toml  PLAN.md  README.md  baproto.gd  icon.svg.import  plugin.cfg  runtime.gd  runtime.gd.uid  runtime_test.gd  runtime_test.gd.uid
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: build-baproto-gdscript.yml  check-commit-godot.yml  check-commit-rust.yml  check-commit.yml  release-please.yml
.release-please/: config.json
examples/: character.baproto  character.baproto.import
generate/: .gitignore  AGENTS.md  Cargo.toml  Cross.toml
generate/src/: main.rs
generate/src/cmd/: generate.rs  mod.rs
generate/src/gdscript/: mod.rs
import/: binary.gd  binary_test.gd  platform.gd  platform.gd.uid  platform_test.gd  platform_test.gd.uid  plugin.gd  plugin.gd.uid  setting.gd  setting.gd.uid
runtime/: bitstream.gd  bitstream.gd.uid  bitstream_test.gd  bitstream_test.gd.uid  encoding.gd  encoding.gd.uid  encoding_test.gd  encoding_test.gd.uid  reader.gd  reader.gd.uid  reader_test.gd  reader_test.gd.uid  runtime.gd  runtime.gd.uid  writer.gd  writer.gd.uid  writer_test.gd  writer_test.gd.uid
src/cmd/: generate.rs
src/gdscript/: codec.rs  collect.rs  enumeration.rs  message.rs  mod.rs  namespace.rs  types.rs
src/gdscript/ast/: assign.rs  comment.rs  config.rs  control.rs  enumeration.rs  expr.rs  function.rs  item.rs  mod.rs  script.rs
src/gdscript/codec/: decode.rs  encode.rs  enumeration.rs  mod.rs  wire.rs
