[package]
  name         = "baproto-gdscript"
  version      = "0.1.4"                                                                                                   # x-release-please-version
  description  = "A Godot addon that provides an editor plugin which compiles `build-a-proto` schema files into GDScript."
  edition      = "2024"
  rust-version = "1.92.0"

[[bin]]
  name = "baproto-gdscript"
  path = "src/main.rs"

[dependencies]
  anyhow         = "1.0.100"
  baproto        = {git = "https://github.com/coffeebeats/build-a-proto.git", rev = "97e540df3e6b82e900004e48a6b0e99d024bdab8"}
  clap           = {version = "4.5.53", features = ["derive"]}
  derive_builder = "0.20.2"
  serde          = {version = "1.0.228", features = ["derive"]}
  serde_json     = "1.0.149"
