[package]
  name         = "baproto-gdscript"
  version      = "0.1.0"
  description  = "A Godot addon that provides an editor plugin which compiles `build-a-proto` schema files into GDScript."
  edition      = "2024"
  rust-version = "1.92.0"

[[bin]]
  name = "baproto-gdscript"
  path = "src/main.rs"

[dependencies]
  anyhow     = "1.0.100"
  baproto    = {git = "https://github.com/coffeebeats/build-a-proto.git", rev = "68a2cd9dd3489e539691d58497b38979306e0fe2"}
  clap       = {version = "4.5.53", features = ["derive"]}
  serde      = {version = "1.0.228", features = ["derive"]}
  serde_json = "1.0.149"
