[package]
  name         = "baproto-gdscript"
  version      = "0.1.1"                                                                                                   # x-release-please-version
  description  = "A Godot addon that provides an editor plugin which compiles `build-a-proto` schema files into GDScript."
  edition      = "2024"
  rust-version = "1.92.0"

[[bin]]
  name = "baproto-gdscript"
  path = "src/main.rs"

[dependencies]
  anyhow     = "1.0.100"
  baproto    = {git = "https://github.com/coffeebeats/build-a-proto.git", rev = "bb682c1abdcdb324ecbdfdc484ab76788ab1c905"}
  clap       = {version = "4.5.53", features = ["derive"]}
  serde      = {version = "1.0.228", features = ["derive"]}
  serde_json = "1.0.149"
